lab/ssl/frontend-ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    kubernetes.io/tls-acme: 'true' # enable TLS
spec:
  tls:
  - hosts:
    - frontend.0673708a46bc456ebd56.eastus.aksapp.io
    secretName: frontend-tls-secret
  rules:
  - host: frontend.0673708a46bc456ebd56.eastus.aksapp.io
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
        path: /
